Fix for the weird alignment issue on the gay code

--- a/css/main.scss
+++ b/css/main.scss
@@ -137,8 +137,12 @@ header {
 
 		max-height: calc(100% - 5em);
 		overflow: auto scroll;
-		
-		white-space: pre-line;
+
+		white-space: pre-wrap;
+
+		.token {
+			overflow-wrap: break-word;
+		}
 	}
 }
 
